src/web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8501
  selector:
    app: web
